--- a/config/fpm-prod.conf
+++ b/config/fpm-prod.conf
@@ -1,10 +1,13 @@
 [www]
 user = www-data
 group = www-data
-pm = dynamic
-pm.max_children = 35
-pm.start_servers = 5
-pm.min_spare_servers = 5
-pm.max_spare_servers = 10
+pm = static
+pm.max_children = 12
 pm.process_idle_timeout = 300s
-pm.status_path = /php-status
+pm.status_path = /status
+pm.max_requests = 500
+
+access.format = "%u %R - %{REQUEST_URI}e - %t \"%m %r%Q%q\" %s %f %{mili}d %{megabytes}M %C%%"
+
+request_slowlog_timeout = 3s
+slowlog = /var/www/storage/logs/php-fpm-slow.log
