--- a/config/dev.ini
+++ b/config/dev.ini
@@ -1,6 +1,9 @@
 upload_max_filesize = 200M
 post_max_size = 200M
 opcache.enable=1
+opcache.validate_timestamps=1
+opcache.revalidate_freq=0
 xdebug.remote_autostart=0
 xdebug.remote_enable=0
 pcre.jit=0
+expose_php = off
